--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
             </div>
             <!-- Off Canvas Menu -->
             <aside class="right-off-canvas-menu">
-                <!-- whatever you want goes here -->
                 <ul>
-                    <li><a href="#">Item 1</a></li>
-                    ...
+                    <li><a href="#">Nothing here!</a></li>
                 </ul>
             </aside>
             <!-- close the off-canvas menu -->
             <a class="exit-off-canvas"></a>
             <div class="headerimg" data-stellar-background-ratio="0.5"></div>
-            <div class="menu">
+            <div class="menu headermenu">
                 <nav class="top-bar" data-topbar>
                     <ul class="title-area">
                         <li class="name">
@@ -46,8 +44,8 @@
             </div>
         </div>
     </div>
-    <div class="content">
-        <div class="sliderdivouter"><div class="sliderdiv">
+    <div class="sliderdivouter content">
+        <div class="sliderdiv">
             <ul class="faceslider">
                 <li><img src="http://avatar.publicuhc.com/helm/bergasms"/></li>
                 <li><img src="http://avatar.publicuhc.com/helm/loryen"/></li>
@@ -100,48 +98,59 @@
                 <li><img src="http://avatar.publicuhc.com/helm/ntbama"/></li>
                 <li><img src="http://avatar.publicuhc.com/helm/haruko1"/></li>
             </ul>
-        </div></div>
-        <section class="pagetitle">
-            <div class="row">
-                <div class="12 columns text-center">
-                    <h1 class="insorum-invert">insorum<span>.com</span> Youtubers</h1>
-                    <p>
-                        <i class="fa fa-arrow-down"></i> Check out some of our youtube channels here. <i class="fa fa-arrow-down"></i>
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="all_channels">
-            <div class="small-8 columns small-offset-2">
-                <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
-                    <li>
-                        <a data-tooltip title="Fuzzboxx" class="has-tip various fancybox" href="fuzzboxx.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fuzzboxx"/></a>
-                    </li>
-                    <li>
-                        <a data-tooltip title="Sonmica" class="has-tip various fancybox" href="sonmica.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/sonmica"/></a>
-                    </li>
-                    <li>
-                        <a data-tooltip title="Lit Zippo" class="has-tip various fancybox" href="lit_zippo.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Lit_Zippo"/></a>
-                    </li>
-                    <li>
-                        <a data-tooltip title="Fairyjuice" class="has-tip various fancybox" href="fairyjuice.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fairyjuice"/></a>
-                    </li>
-                    <li>
-                        <a data-tooltip title="Eliunhost" class="has-tip various fancybox" href="eluinhost.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Eluinhost"/></a>
-                    </li>
-                    <li>
-                        <a data-tooltip title="MJLaukala" class="has-tip various fancybox" href="mjlaukala.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/MJLaukala"/></a>
-                    </li>
-                    <li>
-                        <a data-tooltip title="Rippersteve" class="has-tip various fancybox" href="rippersteve.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/rippersteveM5"/></a>
-                    </li>
-                    <li>
-                        <a data-tooltip title="EddCase" class="has-tip various fancybox" href="eddcase.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/EddCase"/></a>
-                    </li>
-
+        </div>
+    </div>
+    <div class="content row">
+        <div class="12 colums pagetitle text-center">
+            <h1 class="insorum-invert">insorum<span>.com</span> Youtubers</h1>
+            <p>
+                <i class="fa fa-arrow-down"></i> Check out some of our youtube channels here. <i class="fa fa-arrow-down"></i>
+            </p>
+        </div>
+        <div class="small-8 columns small-offset-2 all_channels">
+            <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
+                <li>
+                    <a data-tooltip title="Fuzzboxx" class="has-tip various fancybox" href="fuzzboxx.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fuzzboxx"/></a>
+                </li>
+                <li>
+                    <a data-tooltip title="Sonmica" class="has-tip various fancybox" href="sonmica.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/sonmica"/></a>
+                </li>
+                <li>
+                    <a data-tooltip title="Lit Zippo" class="has-tip various fancybox" href="lit_zippo.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Lit_Zippo"/></a>
+                </li>
+                <li>
+                    <a data-tooltip title="Fairyjuice" class="has-tip various fancybox" href="fairyjuice.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fairyjuice"/></a>
+                </li>
+                <li>
+                    <a data-tooltip title="Eliunhost" class="has-tip various fancybox" href="eluinhost.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Eluinhost"/></a>
+                </li>
+                <li>
+                    <a data-tooltip title="MJLaukala" class="has-tip various fancybox" href="mjlaukala.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/MJLaukala"/></a>
+                </li>
+                <li>
+                    <a data-tooltip title="Rippersteve" class="has-tip various fancybox" href="rippersteve.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/rippersteveM5"/></a>
+                </li>
+                <li>
+                    <a data-tooltip title="EddCase" class="has-tip various fancybox" href="eddcase.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/EddCase"/></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="menu footer">
+        <nav class="top-bar" data-topbar>
+            <ul class="title-area">
+                <li class="name">
+                    <h1><a href="#"><b>© 2014 Eluinhost</b></a></h1>
+                </li>
+            </ul>
+            <section class="top-bar-section">
+                <ul class="right">
+                    <li><a href="http://youtube.com/insorum"><i class="fa fa-youtube-play"></i></a></li>
+                    <li><a href="http://twitter.com/insorum"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="whogivesafuckaboutg+"><i class="fa fa-google-plus"></i></a></li>
                 </ul>
-            </div>
-        </section>
+            </section>
+        </nav>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
@@ -197,10 +206,10 @@
 
         document.onscroll = function(){
             if ($(window).scrollTop() >= newHeight) {
-                $('.menu').addClass('fixed');
+                $('.headermenu').addClass('fixed');
                 $('.content').addClass('menuoffset');
             } else {
-                $('.menu').removeClass('fixed');
+                $('.headermenu').removeClass('fixed');
                 $('.content').removeClass('menuoffset');
             }
         };
