--- a/fuzzboxx.html
+++ b/fuzzboxx.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="large-9 columns">
-                    <blockquote class="panel">"I've never said anything quotable, you can quote me on that"<cite>MJLaukala</cite></blockquote>
+                    <blockquote class="panel">"I've never said anything quotable, you can quote me on that"<cite>Fuzzboxx</cite></blockquote>
                 </div>
             </div>
         </div>
