change skin URL

--- a/index.html
+++ b/index.html
@@ -47,56 +47,56 @@
     <div class="sliderdivouter content">
         <div class="sliderdiv">
             <ul class="faceslider">
-                <li><img src="http://avatar.publicuhc.com/helm/bergasms"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/loryen"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/prismatic_orchid"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/birdmannom"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/funsong_3"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/sonmica"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/shadoune666"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/exetonline"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/winthermaw"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/dracomage"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/aeam_bill"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/sebastian__w"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/guardaxion"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/dykam"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/zaran"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/joneska88"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/fuzzboxx"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/zxsubzerozxz"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/audicymc"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/golden_kumquat"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/mattdrumz"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/methii"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/eddcase"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/hawkke"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/fairyjuice"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/oobula"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/cx_flake"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/kiinako_"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/firefoxvulpix"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/cold_storage77"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/_blueraspberry_"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/reddyeno5"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/lit_zippo"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/jutlanduk"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/montecarbo"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/ttaylorr"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/kev813"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/ghowden"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/utterback423"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/origamidood"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/mikedanewb"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/butterpaw"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/derpchicken101"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/pinkie31459"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/ripperstevem5"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/brettradsfield"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/mjlaukala"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/alirat"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/ntbama"/></li>
-                <li><img src="http://avatar.publicuhc.com/helm/haruko1"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/bergasms"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/loryen"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/prismatic_orchid"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/birdmannom"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/funsong_3"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/sonmica"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/shadoune666"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/exetonline"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/winthermaw"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/dracomage"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/aeam_bill"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/sebastian__w"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/guardaxion"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/dykam"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/zaran"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/joneska88"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/fuzzboxx"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/zxsubzerozxz"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/audicymc"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/golden_kumquat"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/mattdrumz"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/methii"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/eddcase"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/hawkke"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/fairyjuice"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/oobula"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/cx_flake"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/kiinako_"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/firefoxvulpix"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/cold_storage77"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/_blueraspberry_"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/reddyeno5"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/lit_zippo"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/jutlanduk"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/montecarbo"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/ttaylorr"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/kev813"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/ghowden"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/utterback423"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/origamidood"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/mikedanewb"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/butterpaw"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/derpchicken101"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/pinkie31459"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/ripperstevem5"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/brettradsfield"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/mjlaukala"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/alirat"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/ntbama"/></li>
+                <li><img src="http://skins.publicuhc.com/helm/haruko1"/></li>
             </ul>
         </div>
     </div>
@@ -110,28 +110,28 @@
         <div class="small-8 columns small-offset-2 all_channels">
             <ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-4">
                 <li>
-                    <a data-tooltip title="Fuzzboxx" class="has-tip various fancybox" href="fuzzboxx.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fuzzboxx"/></a>
+                    <a data-tooltip title="Fuzzboxx" class="has-tip various fancybox" href="fuzzboxx.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/Fuzzboxx"/></a>
                 </li>
                 <li>
-                    <a data-tooltip title="Sonmica" class="has-tip various fancybox" href="sonmica.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/sonmica"/></a>
+                    <a data-tooltip title="Sonmica" class="has-tip various fancybox" href="sonmica.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/sonmica"/></a>
                 </li>
                 <li>
-                    <a data-tooltip title="Lit Zippo" class="has-tip various fancybox" href="lit_zippo.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Lit_Zippo"/></a>
+                    <a data-tooltip title="Lit Zippo" class="has-tip various fancybox" href="lit_zippo.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/Lit_Zippo"/></a>
                 </li>
                 <li>
-                    <a data-tooltip title="Fairyjuice" class="has-tip various fancybox" href="fairyjuice.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Fairyjuice"/></a>
+                    <a data-tooltip title="Fairyjuice" class="has-tip various fancybox" href="fairyjuice.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/Fairyjuice"/></a>
                 </li>
                 <li>
-                    <a data-tooltip title="Eliunhost" class="has-tip various fancybox" href="eluinhost.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/Eluinhost"/></a>
+                    <a data-tooltip title="Eliunhost" class="has-tip various fancybox" href="eluinhost.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/Eluinhost"/></a>
                 </li>
                 <li>
-                    <a data-tooltip title="MJLaukala" class="has-tip various fancybox" href="mjlaukala.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/MJLaukala"/></a>
+                    <a data-tooltip title="MJLaukala" class="has-tip various fancybox" href="mjlaukala.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/MJLaukala"/></a>
                 </li>
                 <li>
-                    <a data-tooltip title="Rippersteve" class="has-tip various fancybox" href="rippersteve.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/rippersteveM5"/></a>
+                    <a data-tooltip title="Rippersteve" class="has-tip various fancybox" href="rippersteve.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/rippersteveM5"/></a>
                 </li>
                 <li>
-                    <a data-tooltip title="EddCase" class="has-tip various fancybox" href="eddcase.html" data-ytta-id="-"><img width="100%" height="100%" src="http://avatar.publicuhc.com/helm/EddCase"/></a>
+                    <a data-tooltip title="EddCase" class="has-tip various fancybox" href="eddcase.html" data-ytta-id="-"><img width="100%" height="100%" src="http://skins.publicuhc.com/helm/EddCase"/></a>
                 </li>
             </ul>
         </div>
