--- a/fairyjuice.html
+++ b/fairyjuice.html
@@ -17,7 +17,7 @@
                 <div class="large-3 columns">
                     <div class="row">
                         <div class="12 columns">
-                            <img src="http://avatar.publicuhc.com/helm/Fairyjuice"/>
+                            <img src="http://skins.publicuhc.com/helm/Fairyjuice"/>
                         </div>
                     </div>
                     <div class="row">
