--- a/rippersteve.html
+++ b/rippersteve.html
@@ -17,7 +17,7 @@
                 <div class="large-3 columns">
                     <div class="row">
                         <div class="12 columns">
-                            <img src="http://avatar.publicuhc.com/helm/rippersteveM5"/>
+                            <img src="http://skins.publicuhc.com/helm/rippersteveM5"/>
                         </div>
                     </div>
                     <div class="row">
