--- a/fuzzboxx.html
+++ b/fuzzboxx.html
@@ -17,7 +17,7 @@
                 <div class="large-3 columns">
                     <div class="row">
                         <div class="12 columns">
-                            <img src="http://skins.publicuhc.com/helm/Fuzzboxx"/>
+                            <img src="http://skins.publicuhc.com/helm/Fuzzboxx/180"/>
                         </div>
                     </div>
                     <div class="row">
