--- a/lit_zippo.html
+++ b/lit_zippo.html
@@ -17,7 +17,7 @@
                 <div class="large-3 columns">
                     <div class="row">
                         <div class="12 columns">
-                            <img src="http://skins.publicuhc.com/helm/Lit_Zippo"/>
+                            <img src="http://skins.publicuhc.com/helm/Lit_Zippo/180"/>
                         </div>
                     </div>
                     <div class="row">
